/**
 * Interface for notification formation
 */
public interface INotificationPlan {
    /**
     * Method for forming notification
     * @return notification text
     */
    String formNotification();
}